After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 721159 - Fix default window width
Fix default window width
Status: RESOLVED FIXED
Product: bijiben
Classification: Applications
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Bijiben maintainer(s)
Bijiben maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-12-28 16:08 UTC by Michael Catanzaro
Modified: 2013-12-31 16:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix default window width (925 bytes, patch)
2013-12-28 16:08 UTC, Michael Catanzaro
committed Details | Review

Description Michael Catanzaro 2013-12-28 16:08:41 UTC
The default width is almost big enough to show three columns of notes,
but not quite. This leaves lots of yucky blank space on the right side
of the window.

This is only relevant for modern monitors; on an 800x600, Bijiben is
going to be automatically maximized anyway.
Comment 1 Michael Catanzaro 2013-12-28 16:08:43 UTC
Created attachment 264974 [details] [review]
Fix default window width
Comment 2 Pierre-Yves Luyten 2013-12-31 10:34:00 UTC
Comment on attachment 264974 [details] [review]
Fix default window width

thanks

I should add some dconf key to remember window width, but anyway the patch is good since we need an initial size.
Comment 3 Michael Catanzaro 2013-12-31 16:57:45 UTC
That'd be good, too. Most GNOME apps remember not just their size, but also their location.
Comment 4 Michael Catanzaro 2013-12-31 16:58:20 UTC
Attachment 264974 [details] pushed as 2919051 - Fix default window width