Fix default window width

The default width is almost big enough to show three columns of notes,
but not quite. This leaves lots of yucky blank space on the right side
of the window.

This is only relevant for modern monitors; on an 800x600, Bijiben is
going to be automatically maximized anyway.

https://bugzilla.gnome.org/show_bug.cgi?id=721159